--- a/animation/index.html
+++ b/animation/index.html
@@ -3,10 +3,12 @@
 <head>
   <script src="../libs/p5.min.js"></script>
   <script src="../libs/p5.dom.min.js"></script>
-  <script src="sketch.js"></script>
+  <script src="sketch.js" defer></script>
   <script src="buoy.js"></script>
 </head>
 
-<body oncontextmenu="return false;"></body>
+<body oncontextmenu="return false;">
+  <button id="btnExportVideo">Export Video</button>
+</body>
 
 </html>
